[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://menu/start.gd" type="Script" id=2]
[ext_resource path="res://title.png" type="Texture" id=3]
[ext_resource path="res://menuTheme.tres" type="Theme" id=4]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Start" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 599.0
custom_constants/margin_right = 53
custom_constants/margin_top = 200
custom_constants/margin_left = 53
custom_constants/margin_bottom = 200
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Start"]
margin_left = 53.0
margin_top = 200.0
margin_right = 971.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="TextureRect" parent="Start/VBoxContainer"]
margin_right = 918.0
margin_bottom = 101.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Username" type="LineEdit" parent="Start/VBoxContainer"]
margin_top = 105.0
margin_right = 918.0
margin_bottom = 129.0
theme = ExtResource( 4 )
align = 1
placeholder_text = "Username"
caret_blink = true

[node name="Network" type="HBoxContainer" parent="Start/VBoxContainer"]
margin_top = 133.0
margin_right = 918.0
margin_bottom = 157.0

[node name="IP" type="LineEdit" parent="Start/VBoxContainer/Network"]
margin_right = 856.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 1
placeholder_text = "IP Address"

[node name="Port" type="LineEdit" parent="Start/VBoxContainer/Network"]
margin_left = 860.0
margin_right = 918.0
margin_bottom = 24.0
align = 1
placeholder_text = "Port"

[node name="HBoxContainer2" type="HBoxContainer" parent="Start/VBoxContainer"]
margin_top = 161.0
margin_right = 918.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="Create" type="Button" parent="Start/VBoxContainer/HBoxContainer2"]
margin_right = 439.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Create"

[node name="Join" type="Button" parent="Start/VBoxContainer/HBoxContainer2"]
margin_left = 479.0
margin_right = 918.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Join"

[node name="Error" type="Label" parent="Start/VBoxContainer"]
margin_top = 185.0
margin_right = 918.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
[connection signal="text_changed" from="Start/VBoxContainer/Username" to="." method="_onTextFieldChanged"]
[connection signal="text_entered" from="Start/VBoxContainer/Username" to="." method="_onTextFieldEntered"]
[connection signal="text_entered" from="Start/VBoxContainer/Network/IP" to="." method="_onIPEntered"]
[connection signal="text_entered" from="Start/VBoxContainer/Network/Port" to="." method="_onPortEntered"]
[connection signal="pressed" from="Start/VBoxContainer/HBoxContainer2/Create" to="." method="_onCreateButtonPressed"]
[connection signal="pressed" from="Start/VBoxContainer/HBoxContainer2/Join" to="." method="_onJoinButtonPressed"]
